# 10_saas_architecture

./: README.md  index.html  pyproject.toml
src/: __init__.py
src/tenants/: __init__.py  isolation.py
